--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
                     <propertyFile>src/main/resources/liquibase.properties</propertyFile>
                 </configuration>
             </plugin>
+
+            <!--Wildfly -->
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>4.2.0.Final</version>
+                <configuration>
+                    <hostname>localhost</hostname>
+                    <port>9990</port>
+                    <jbossHome>C:\SDK\wildfly-38.0.0.Final</jbossHome>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
