--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>4.29.2</version>
         </dependency>
 
+        <!-- GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <!-- JUnit for tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
